[TASK] Add aria roles to frontend templates

--- a/Resources/Private/Templates/Login/Form.html
+++ b/Resources/Private/Templates/Login/Form.html
@@ -1,25 +1,31 @@
+<html xmlns:f="https://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:layout name="Default"/>
 
 <f:section name="main">
 	<f:if condition="{auth0Error}">
 		<div class="alert alert-dismissible fade show alert-danger" role="alert">
-			<p><f:translate key="auth0.error.{auth0Error}">{auth0ErrorDescription}</f:translate></p>
-			<button class="close" type="button" data-dismiss="alert" aria-labelledby="{f:translate(key: 'auth0.alert.label.close')}">
+			<p>
+				<f:translate key="auth0.error.{auth0Error}">{auth0ErrorDescription}</f:translate>
+			</p>
+			<button class="close" type="button" data-dismiss="alert"
+					aria-labelledby="{f:translate(key: 'auth0.alert.label.close')}">
 				<span aria-hidden="true">&times;</span>
 			</button>
 		</div>
 	</f:if>
 	<f:if condition="{userInfo}">
 		<f:then>
-			<f:link.action action="logout" class="btn btn-block btn-secondary">
-				<f:translate key="plugin.login.logout" />
+			<f:link.action action="logout" class="btn btn-block btn-secondary" additionalAttributes="{aria-role: 'button'}" tabindex="0">
+				<f:translate key="plugin.login.logout"/>
 			</f:link.action>
 		</f:then>
 		<f:else>
-			<f:link.action action="login" arguments="{rawAdditionalAuthorizeParameters: settings.rawAdditionalAuthorizeParameters}"
-			               class="btn btn-block btn-primary">
-				<f:translate key="plugin.login.login" />
+			<f:link.action action="login"  additionalAttributes="{aria-role: 'button'}" tabindex="0"
+						   arguments="{rawAdditionalAuthorizeParameters: settings.rawAdditionalAuthorizeParameters}"
+						   class="btn btn-block btn-primary">
+				<f:translate key="plugin.login.login"/>
 			</f:link.action>
 		</f:else>
 	</f:if>
 </f:section>
+</html>
