--- a/Resources/Private/Templates/Property/List.html
+++ b/Resources/Private/Templates/Property/List.html
@@ -1,5 +1,6 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:be="https://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+	  xmlns:core="https://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+	  xmlns:f="https://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:layout name="Backend" />
 
 <f:section name="content">
@@ -13,6 +14,10 @@
 			</f:link.action>
 		</f:be.infobox>
 	</f:if>
+
+	<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.infobox.api.title')}">
+		<p>{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.infobox.api.content')}</p>
+	</f:be.infobox>
 
 	<f:if condition="{extensionConfiguration.enableFrontendLogin}">
 		<h2>
@@ -48,3 +53,4 @@
 		<f:render partial="Backend/PropertyTable" arguments="{configuration: yamlConfiguration.properties.be_users.app_metadata, table: 'be_users', type: 'app_metadata'}"/>
 	</f:if>
 </f:section>
+</html>
