[TASK] Unify appearance of backend module sections

--- a/Resources/Private/Partials/Backend/PropertyTable.html
+++ b/Resources/Private/Partials/Backend/PropertyTable.html
@@ -60,7 +60,7 @@
 	<f:else>
 		<div class="row">
 			<div class="col-sm-12">
-				<p><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.no-configuration"/></p>
+				<f:be.infobox state="-1" title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.no-configuration')}"/>
 			</div>
 		</div>
 	</f:else>
