--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -5,22 +5,33 @@
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.title" /></h1>
 
+	<f:if condition="!{settings}">
+		<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.ts.title')}" state="1">
+			<p>
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.ts.content" />
+			</p>
+			<f:be.link route="web_ts" class="btn btn-default">
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.ts.button" />
+			</f:be.link>
+		</f:be.infobox>
+	</f:if>
+
+	<f:if condition="{directory}">
+		<f:then>
+			<p class="lead">
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text" />
+				<core:iconForRecord row="{directory}" table="pages" /> {directory.title} ({directory.uid})
+			</p>
+		</f:then>
+		<f:else>
+			<f:be.infobox state="1">
+				{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.no_directory') -> f:format.html()}
+			</f:be.infobox>
+		</f:else>
+	</f:if>
+
 	<f:if condition="{applications}">
 		<f:then>
-			<f:if condition="{directory}">
-				<f:then>
-					<p class="lead">
-						<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text" />
-						<core:iconForRecord row="{directory}" table="pages" /> {directory.title} ({directory.uid})
-					</p>
-				</f:then>
-				<f:else>
-					<f:be.infobox state="1">
-						{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.no_directory') -> f:format.html()}
-					</f:be.infobox>
-				</f:else>
-			</f:if>
-
 			<f:render partial="Backend/ApplicationTable" arguments="{_all}" />
 		</f:then>
 		<f:else>
