[BUGFIX] Do not use html namespace as long as we support TYPO3 v9

--- a/Resources/Private/Templates/Property/List.html
+++ b/Resources/Private/Templates/Property/List.html
@@ -1,6 +1,5 @@
-<html xmlns:be="https://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
-	  xmlns:core="https://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
-	  xmlns:f="https://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+{namespace be=TYPO3\CMS\Backend\ViewHelpers}
+{namespace core=TYPO3\CMS\Core\ViewHelpers}
 <f:layout name="Backend" />
 
 <f:section name="content">
