--- a/Resources/Private/Templates/Login/Form.html
+++ b/Resources/Private/Templates/Login/Form.html
@@ -23,6 +23,7 @@
 		<f:else>
 			<f:link.action action="login"  additionalAttributes="{aria-role: 'button'}" tabindex="0"
 						   arguments="{rawAdditionalAuthorizeParameters: settings.rawAdditionalAuthorizeParameters}"
+						   additionalParams="{referrer: referrer}"
 						   class="btn btn-block btn-primary">
 				<f:translate key="plugin.login.login"/>
 			</f:link.action>
