--- a/Resources/Private/Templates/Backend/List.html
+++ b/Resources/Private/Templates/Backend/List.html
@@ -8,7 +8,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.subtitle\')}', icon: 'auth0'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.text"/>
 				</p>
@@ -23,7 +23,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.subtitle\')}', icon: 'status-user-group-frontend'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.text"/>
 				</p>
@@ -38,7 +38,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.subtitle\')}', icon: 'status-user-frontend'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.text"/>
 				</p>
@@ -53,7 +53,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.subtitle\')}', icon: 'mimetypes-x-tx_rtehtmlarea_acronym'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.text"/>
 				</p>
@@ -69,7 +69,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.subtitle\')}', icon: 'apps-pagetree-drag-place-denied'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.text"/>
 				</p>
