--- a/Resources/Private/Templates/Property/New.html
+++ b/Resources/Private/Templates/Property/New.html
@@ -4,6 +4,8 @@
 
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.title.add" /></h1>
-
 	<f:render partial="Backend/Property/Form" arguments="{table: table, type: type, properties: properties, action: 'create'}" />
+
+	<h2><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.title.add.forigntable" /></h2>
+	<f:render partial="Backend/Property/SelectForeignTable" arguments="{table: table, type: type, foreignTables: foreignTables, action: 'selectForeignTable'}" />
 </f:section>
