--- a/Resources/Private/Templates/ForeignProperty/Edit.html
+++ b/Resources/Private/Templates/ForeignProperty/Edit.html
@@ -5,5 +5,5 @@
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.title.edit" /></h1>
 
-	<f:render partial="Backend/Property/ForeignTableFrom" arguments="{property: property, table: table, type: type, foreignTable: foreignTable, joins: joins, properties: properties, action: 'update'}" />
+	<f:render partial="Backend/Property/ForeignTableFrom" arguments="{property: property, table: table, type: type, foreignTable: foreignTable, foreignKey: foreignKey, joins: joins, properties: properties, action: 'update'}" />
 </f:section>
