--- a/Resources/Private/Templates/ForeignProperty/SelectForeignTable.html
+++ b/Resources/Private/Templates/ForeignProperty/SelectForeignTable.html
@@ -4,5 +4,5 @@
 
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.title.add" /></h1>
-	<f:render partial="Backend/Property/ForeignTableFrom" arguments="{table: table, type: type, properties: properties, foreignTable: foreignTable, joins: joins, action: 'create'}" />
+	<f:render partial="Backend/Property/ForeignTableFrom" arguments="{table: table, type: type, properties: properties, foreignKey: foreignKey, foreignTable: foreignTable, joins: joins, action: 'create'}" />
 </f:section>
