[TASK] Add Fluid namespaces to template files

--- a/Resources/Private/Templates/Property/List.html
+++ b/Resources/Private/Templates/Property/List.html
@@ -1,5 +1,6 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:layout name="Backend" />
 
 <f:section name="content">
