--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -1,5 +1,7 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+	  xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:layout name="Backend" />
 
 <f:section name="content">
@@ -48,3 +50,4 @@
 		<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.new"/>
 	</be:link.newRecord>
 </f:section>
+</html>
