--- a/Resources/Private/Templates/Backend.html
+++ b/Resources/Private/Templates/Backend.html
@@ -1,3 +1,6 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
+
 <f:layout name="Login"/>
 
 <f:section name="loginFormFields">
@@ -49,3 +52,4 @@
 		</f:else>
 	</f:if>
 </f:section>
+</html>
