--- a/Resources/Private/Templates/Backend/List.html
+++ b/Resources/Private/Templates/Backend/List.html
@@ -1,5 +1,6 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:layout name="Backend" />
 
 <f:section name="content">
@@ -60,8 +61,7 @@
 			</div>
 			<div class="card-footer">
 				<a href="https://docs.typo3.org/p/leuchtfeuer/auth0/master/en-us/" target="_blank" class="btn btn-default">
-					<core:icon identifier="apps-pagetree-page-shortcut-external" />
-					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.button"/>
+					<core:icon identifier="apps-pagetree-page-shortcut-external" />					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.button"/>
 				</a>
 			</div>
 		</div>
@@ -94,3 +94,4 @@
 		</div>
 	</div>
 </f:section>
+</html>
