--- a/Resources/Private/Templates/Login/Form.html
+++ b/Resources/Private/Templates/Login/Form.html
@@ -1,5 +1,5 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:layout name="Default"/>
 
 <f:section name="main">
