--- a/Resources/Private/Templates/Property/Edit.html
+++ b/Resources/Private/Templates/Property/Edit.html
@@ -1,5 +1,5 @@
-{namespace be=TYPO3\CMS\Backend\ViewHelpers}
-{namespace core=TYPO3\CMS\Core\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+	  data-namespace-typo3-fluid="true">
 <f:layout name="Backend" />
 
 <f:section name="content">
@@ -7,3 +7,4 @@
 
 	<f:render partial="Backend/Property/Form" arguments="{property: property, table: table, type: type, properties: properties, action: 'update'}" />
 </f:section>
+</html>
