[TASK] Add new Bootstrap card class to maintain style

--- a/Resources/Private/Templates/Backend/List.html
+++ b/Resources/Private/Templates/Backend/List.html
@@ -9,7 +9,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.subtitle\')}', icon: 'auth0'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.application.text"/>
 				</p>
@@ -24,7 +24,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.subtitle\')}', icon: 'status-user-group-frontend'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.text"/>
 				</p>
@@ -39,7 +39,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.subtitle\')}', icon: 'status-user-frontend'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.text"/>
 				</p>
@@ -54,7 +54,7 @@
 		<div class="card card-size-fixed-small">
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.subtitle\')}', icon: 'mimetypes-x-tx_rtehtmlarea_acronym'}" />
-			<div class="card-content">
+			<div class="card-content card-body">
 				<p class="card-text">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.documentation.text"/>
 				</p>
@@ -70,7 +70,7 @@
 			<f:render partial="Backend/Card/Header"
 					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.subtitle\')}', icon: 'apps-pagetree-drag-place-denied'}" />
 			<div class="card-content">
-				<p class="card-text">
+				<p class="card-text card-body">
 					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.issue.text"/>
 				</p>
 			</div>
