--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -5,7 +5,9 @@
 <f:layout name="Backend" />
 
 <f:section name="content">
-	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.title" /></h1>
+    <h1>
+        <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.title"/>
+    </h1>
 
 	<f:if condition="!{settings}">
 		<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.ts.title')}" state="1">
@@ -19,12 +21,13 @@
 	</f:if>
 
 	<f:if condition="{directory}">
-		<f:then>
-			<p class="lead">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text" />
-				<core:iconForRecord row="{directory}" table="pages" /> {directory.title} ({directory.uid})
-			</p>
-		</f:then>
+        <f:then>
+            <p class="lead">
+                <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text"/>
+                <core:iconForRecord row="{directory}" table="pages"/>
+                {directory.title} ({directory.uid})
+            </p>
+        </f:then>
 		<f:else>
 			<f:be.infobox state="1">
 				{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.no_directory') -> f:format.html()}
@@ -33,9 +36,9 @@
 	</f:if>
 
 	<f:if condition="{applications}">
-		<f:then>
-			<f:render partial="Backend/ApplicationTable" arguments="{_all}" />
-		</f:then>
+        <f:then>
+            <f:render partial="Backend/ApplicationTable" arguments="{_all}"/>
+        </f:then>
 		<f:else>
 			<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.infobox.title')}" state="-1">
 				<p>
@@ -45,9 +48,9 @@
 		</f:else>
 	</f:if>
 
-	<be:link.newRecord table="tx_auth0_domain_model_application" class="btn btn-default" pid="{pid}" returnUrl="{returnUrl}">
-		<core:icon identifier="actions-document-new" size="small"/>
-		<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.new"/>
-	</be:link.newRecord>
+    <be:link.newRecord table="tx_auth0_domain_model_application" class="btn btn-default" pid="{pid}" returnUrl="{returnUrl}">
+        <core:icon identifier="actions-document-new" size="small"/>
+        <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.new"/>
+    </be:link.newRecord>
 </f:section>
 </html>
