--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,3 +1,7 @@
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        data-namespace-typo3-fluid="true">
 <div class="c-auth0">
-	<f:render section="main"/>
+    <f:render section="main"/>
 </div>
+</html>
