--- a/Resources/Private/Partials/Backend/UserGroupTable.html
+++ b/Resources/Private/Partials/Backend/UserGroupTable.html
@@ -1,54 +1,60 @@
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true">
 <div class="panel panel-default">
-	<table class="table table-striped table-hover">
-		<thead>
-		<tr>
-			<th class="col-icon nowrap"></th>
-			<th class="text-nowrap">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.identifier"/>
-			</th>
-			<th class="text-nowrap">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.title"/>
-			</th>
-			<th class="text-nowrap">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.role"/>
-			</th>
-			<th class="text-nowrap">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.subgroups"/>
-			</th>
-			<th class="col-control nowrap"></th>
-		</tr>
-		</thead>
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+            <th class="col-icon nowrap"></th>
+            <th class="text-nowrap">
+                <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.identifier"/>
+            </th>
+            <th class="text-nowrap">
+                <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.title"/>
+            </th>
+            <th class="text-nowrap">
+                <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.role"/>
+            </th>
+            <th class="text-nowrap">
+                <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.table.head.subgroups"/>
+            </th>
+            <th class="col-control nowrap"></th>
+        </tr>
+        </thead>
 
-		<tbody>
-		<f:for each="{groupMapping}" as="group">
-			<tr>
-				<td class="col-icon nowrap">
-					<core:iconForRecord table="{table}" row="{group}"/>
-				</td>
-				<td class="text-center">{group.uid}</td>
-				<td data-order="{group.title}" class="nowrap">
-					<be:link.editRecord uid="{group.uid}" table="{table}">
-						{group.title}
-					</be:link.editRecord>
-				</td>
-				<td data-order="{group.title}" class="col-title col-responsive nowrap">
-					{group.auth0_user_group}
-				</td>
-				<td class="text-nowrap text-center">
-					<f:if condition="{group.subgroup}">
-						<f:then>{group.subgroup}</f:then>
-						<f:else>-</f:else>
-					</f:if>
-				</td>
-				<td class="col-control nowrap">
-					<div class="btn-group" role="group">
-						<be:link.editRecord uid="{group.uid}" table="{table}" class="btn btn-default">
-							<core:icon identifier="actions-open" size="small"/>
-						</be:link.editRecord>
-					</div>
-				</td>
-			</tr>
-		</f:for>
-		</tbody>
-	</table>
+        <tbody>
+        <f:for each="{groupMapping}" as="group">
+            <tr>
+                <td class="col-icon nowrap">
+                    <core:iconForRecord table="{table}" row="{group}"/>
+                </td>
+                <td class="text-center">{group.uid}</td>
+                <td data-order="{group.title}" class="nowrap">
+                    <be:link.editRecord uid="{group.uid}" table="{table}">
+                        {group.title}
+                    </be:link.editRecord>
+                </td>
+                <td data-order="{group.title}" class="col-title col-responsive nowrap">
+                    {group.auth0_user_group}
+                </td>
+                <td class="text-nowrap text-center">
+                    <f:if condition="{group.subgroup}">
+                        <f:then>{group.subgroup}</f:then>
+                        <f:else>-</f:else>
+                    </f:if>
+                </td>
+                <td class="col-control nowrap">
+                    <div class="btn-group" role="group">
+                        <be:link.editRecord uid="{group.uid}" table="{table}" class="btn btn-default">
+                            <core:icon identifier="actions-open" size="small"/>
+                        </be:link.editRecord>
+                    </div>
+                </td>
+            </tr>
+        </f:for>
+        </tbody>
+    </table>
 </div>
+</html>
