[TASK] Use image viewhelper for Auth0 logo on login view

--- a/Resources/Private/Layouts/Login.html
+++ b/Resources/Private/Layouts/Login.html
@@ -95,7 +95,7 @@
 						<div class="typo3-login-copyright-wrap">
 							<a href="#loginCopyright" class="typo3-login-copyright-link collapsed" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" aria-controls="loginCopyright">
 								<span><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.copyright" /></span>
-								<img src="{auth0Image}" height="20" alt="auth0" />
+								<f:image src="EXT:auth0/Resources/Public/Images/auth0-logo-horizontal-color.svg" alt="Auth0 logo" height="20" />
 							</a>
 							<div id="loginCopyright" class="collapse">
 								<div class="typo3-login-copyright-text">
