--- a/Resources/Private/Layouts/LoginV11.html
+++ b/Resources/Private/Layouts/LoginV11.html
@@ -102,8 +102,7 @@
                         <div class="typo3-login-copyright-wrap">
                             <a href="#loginCopyright" class="typo3-login-copyright-link t3js-login-copyright-link collapsed" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="loginCopyright">
                                 <span><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.copyright" /></span>
-                                <f:comment><!--the image within the button is only decorative--></f:comment>
-                                <img src="{auth0Image}" alt="" height="20" />
+                                <f:image src="EXT:auth0/Resources/Public/Images/auth0-logo-horizontal-color.svg" alt="Auth0 logo" height="20" />
                             </a>
                             <div id="loginCopyright" class="collapse">
                                 <div class="typo3-login-copyright-text">
