[BUGFIX] Remove wrong CSS class from textfield

--- a/Resources/Private/Partials/Backend/Property/Form.html
+++ b/Resources/Private/Partials/Backend/Property/Form.html
@@ -27,7 +27,7 @@
         <label for="rolesKey">
             <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.table.auth0"/>
         </label>
-        <f:form.textfield class="form-control form-select" name="property[auth0Property]" value="{property.auth0Property}"/>
+        <f:form.textfield class="form-control" name="property[auth0Property]" value="{property.auth0Property}"/>
     </div>
 
     <div class="form-group col-sm-12 col-md-2 col-lg-2">
