--- a/Resources/Private/Templates/Role/List.html
+++ b/Resources/Private/Templates/Role/List.html
@@ -13,7 +13,7 @@
 					<label for="rolesKey">
 						<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.key.label"/>
 					</label>
-					<f:form.textfield id="rolesKey" class="form-control form-select" name="key" value="{yamlConfiguration.roles.key}"/>
+					<f:form.textfield id="rolesKey" class="form-control" name="key" value="{yamlConfiguration.roles.key}"/>
 					<small class="form-text text-muted">
 						<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.key.text"/>
 					</small>
