[BUGFIX] Remove wrong CSS class from textfield

--- a/Resources/Private/Templates/Role/List.html
+++ b/Resources/Private/Templates/Role/List.html
@@ -51,7 +51,7 @@
 						<label for="adminRole">
 							<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.admin.label"/>
 						</label>
-						<f:form.textfield id="adminRole" class="form-control form-select" name="adminRole" value="{yamlConfiguration.roles.beAdmin}"/>
+						<f:form.textfield id="adminRole" class="form-control" name="adminRole" value="{yamlConfiguration.roles.beAdmin}"/>
 						<small class="form-text text-muted">
 							<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.admin.text"/>
 						</small>
