[WIP] Some more small refactoring changes

--- a/Resources/Private/Layouts/Login.html
+++ b/Resources/Private/Layouts/Login.html
@@ -104,7 +104,7 @@
 									</p>
 									<ul class="list-unstyled">
 										<li><a href="https://www.auth0.com" target="_blank" class="t3-login-link-typo3"><i class="fa fa-external-link"></i> Auth0.com</a></li>
-										<li><a href="https://Leuchtfeuer.com?utm_source=link&utm_medium=auth0" target="_blank" class="t3-login-link-donate"><i class="fa fa-external-link"></i> Leuchtfeuer.com</a></li>
+										<li><a href="https://www.leuchtfeuer.com?utm_source=link&utm_medium=auth0" target="_blank" class="t3-login-link-donate"><i class="fa fa-external-link"></i> Leuchtfeuer.com</a></li>
 									</ul>
 								</div>
 							</div>
