--- a/Resources/Private/Layouts/LoginV11.html
+++ b/Resources/Private/Layouts/LoginV11.html
@@ -111,7 +111,7 @@
                                         <f:comment><!--role is for VoiceOver--></f:comment>
                                         <ul class="list-unstyled" role="list">
                                             <li><a href="https://www.auth0.com" target="_blank" rel="noreferrer" class="t3-login-link-typo3"><i class="fa fa-external-link"></i> Auth0.com</a></li>
-                                            <li><a href="https://Leuchtfeuer.com?utm_source=link&utm_medium=auth0" target="_blank" rel="noreferrer" class="t3-login-link-donate"><i class="fa fa-external-link"></i> Leuchtfeuer.com</a></li>
+                                            <li><a href="https://www.leuchtfeuer.com?utm_source=link&utm_medium=auth0" target="_blank" rel="noreferrer" class="t3-login-link-donate"><i class="fa fa-external-link"></i> Leuchtfeuer.com</a></li>
                                         </ul>
                                     </nav>
                                 </div>
