--- a/Resources/Private/Layouts/LoginV12.html
+++ b/Resources/Private/Layouts/LoginV12.html
@@ -4,13 +4,12 @@
         data-namespace-typo3-fluid="true"
 >
 
-<div class="typo3-login auth0-login">
+<div class="typo3-login auth0-login auth0-login-v12">
     <div class="typo3-login-inner">
         <div class="typo3-login-container">
             <div class="typo3-login-wrap">
                 <div class="card card-login">
                     <header class="card-heading">
-                        <h1 class="sr-only"><f:translate key="LLL:EXT:backend/Resources/Private/Language/locallang.xlf:login.header" /></h1>
                         <div class="typo3-login-logo">
                             <img src="{logo}" class="typo3-login-image" alt="{logoAlt}" />
                         </div>
