--- a/Resources/Public/Styles/backend.css
+++ b/Resources/Public/Styles/backend.css
@@ -32,6 +32,18 @@
     margin: 20px 0;
 }
 
+.auth0-login-v12.auth0-login .btn-login {
+    margin: 20px 0 0;
+}
+
+.auth0-login-v12.auth0-login .card-login .card-body {
+    padding: 0em 2.5em 2.5em;
+}
+
+.auth0-login-v12.auth0-login p {
+    margin: 0;
+}
+
 .auth0-login .btn-auth0, .auth0-login .btn-auth0:visited {
     color: #fff;
     background-color: #333333;
