[TASK] Make auth0 login basically work (WIP) - YODA-2033 YODA-2039

--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -2,9 +2,9 @@
 	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
 	  xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
 	  data-namespace-typo3-fluid="true">
-<f:layout name="Backend" />
+<f:layout name="Module" />
 
-<f:section name="content">
+<f:section name="Content">
     <h1>
         <f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.title"/>
     </h1>
