--- a/Resources/Private/Templates/Property/List.html
+++ b/Resources/Private/Templates/Property/List.html
@@ -1,9 +1,9 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
 	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
 	  data-namespace-typo3-fluid="true">
-<f:layout name="Backend" />
+<f:layout name="Module" />
 
-<f:section name="content">
+<f:section name="Content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.title" /></h1>
 
 	<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:properties.infobox.api.title')}">
