[TASK]loginLogo not showing in v13, Added missing logo. [YODA-2334]

--- a/Resources/Private/Layouts/Login.html
+++ b/Resources/Private/Layouts/Login.html
@@ -11,7 +11,7 @@
                 <div class="card card-login">
                     <header class="card-heading">
                         <div class="typo3-login-logo">
-                            <img src="{logo}" class="typo3-login-image" alt="{logoAlt}" />
+                            <f:image src="{logo}" class="typo3-login-image" alt="{logoAlt}" />
                         </div>
                     </header>
                     <main class="card-body">
